seaqt/QtNetwork/gen_qsslcipher.h

class QSslCipher;
typedef struct QSslCipher QSslCipher;
QSslCipher* QSslCipher_new();
QSslCipher* QSslCipher_new_name(struct seaqt_string name);
QSslCipher* QSslCipher_new_name_protocol(struct seaqt_string name, int protocol);
QSslCipher* QSslCipher_new_from(QSslCipher* from);
void QSslCipher_operatorAssign(QSslCipher* self, QSslCipher* from);
void QSslCipher_swap(QSslCipher* self, QSslCipher* other);
bool QSslCipher_operatorEqual(const QSslCipher* self, QSslCipher* other);
bool QSslCipher_operatorNotEqual(const QSslCipher* self, QSslCipher* other);
bool QSslCipher_isNull(const QSslCipher* self);
struct seaqt_string QSslCipher_name(const QSslCipher* self);
int QSslCipher_supportedBits(const QSslCipher* self);
int QSslCipher_usedBits(const QSslCipher* self);
struct seaqt_string QSslCipher_keyExchangeMethod(const QSslCipher* self);
struct seaqt_string QSslCipher_authenticationMethod(const QSslCipher* self);
struct seaqt_string QSslCipher_encryptionMethod(const QSslCipher* self);
struct seaqt_string QSslCipher_protocolString(const QSslCipher* self);
int QSslCipher_protocol(const QSslCipher* self);